deploy/k8s/api/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: rma-api-http-redirect
spec:
  redirectScheme:
    scheme: https
    permanent: true

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: rma-api-strip-prefix
spec:
  stripPrefix:
    prefixes:
      - /api
