deploy/k8s/api/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: rma-api-tls
spec:
  entryPoints:
    - websecure
  tls:
    secretName: rma-dev.raise.openstax.org-tls
  routes:
    - match: REPLACED_IN_PIPELINE
      kind: Rule
      middlewares:
        - name: rma-api-strip-prefix
      services:
        - name: rma-api
          port: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: rma-api
spec:
  entryPoints:
    - web
  routes:
    - match: REPLACED_IN_PIPELINE
      kind: Rule
      middlewares:
        - name: rma-api-http-redirect
      services:
        - name: rma-api
          port: 80
